--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="loading-overlay">
           <div class="loading-spinner"></div>
         </div>
-        <img class="img-fluid" src="/2.png" alt="Your Image">
+        <img class="img-fluid" src="2.png" alt="Your Image">
       </div>
     </div>
   </div>
